fix bug when collapse sidebar

--- a/assets/scss/sidebar.scss
+++ b/assets/scss/sidebar.scss
@@ -84,7 +84,7 @@
       .el-menu-item,
       .el-menu-item .el-tooltip {
         width: $sidebarCollapsed !important;
-        padding: 0 !important;
+        padding: 7px !important;
         text-align: center;
       }
       .svg-icon {
